-------------------------------
 NEWS for R Package "vegclust"
-------------------------------

__Version history__

_Version 1.7.3, April 2018
1. New function 'trajectoryConvergence'
2. New function 'trajectoryDirectionality'

_Version 1.7.2, April 2018

1. New function 'trajectoryAngles'.
2. New function 'trajectoryProjection'.
3. New vignette for trajectory analysis.

_Version 1.7.1, September 2017

1. Package encoding. Changed package and author description.

_Version 1.7.0, September 2017.

1. NEW feature: Trajectory analysis. Functions 'trajectoryDistances', 'trajectoryLengths' and 'trajectoryPCoA.
2. Added option to 'trajectoryDistances' to allow different symmetrization functions (e.g. min) in addition to 'mean'