@@ -7,6 +7,7 @@ __Version history__
 _Version 1.7.3, April 2018
 1. New function 'trajectoryConvergence'
 2. New function 'trajectoryDirectionality'
+3. New function 'centerTrajectories'
 
 _Version 1.7.2, April 2018
 
